# drf-psql-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api/: urls.py
backend/: asgi.py  urls.py
backend/settings/: base.py  debug.py  prod.py  test.py
nginx/: nginx.conf
