[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
drf-spectacular = "^0.18.2"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-stubs-ext = "^0.3.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
mypy = "^0.910"
django-stubs = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
